test/test_units/test_kclvm/test_types/invalid_test_data/type_alias/type_alias_0.k
import pkg

type Person = pkg.Person

data: int = pkg.data
